Make project running

--- a/src/main/twirl/io/yard/index.scala.html
+++ b/src/main/twirl/io/yard/index.scala.html
@@ -1,4 +1,4 @@
-@(modules: Seq[io.yard.core.models.Module], teams: Seq[io.yard.core.models.Team], modulePrefix: String)
+@(modules: Seq[io.yard.core.models.Module], teams: Seq[io.yard.core.models.SlackTeam], modulePrefix: String)
 
 @io.yard.html.main {
 
