--- a/src/main/twirl/io/yard/index.scala.html
+++ b/src/main/twirl/io/yard/index.scala.html
@@ -1,4 +1,4 @@
-@(modules: Seq[io.yard.models.Module], orgs: Seq[io.yard.models.Organization], modulePrefix: String)
+@(modules: Seq[io.yard.common.models.Module], orgs: Seq[io.yard.common.models.Organization], modulePrefix: String)
 
 @io.yard.html.main {
 
